--- a/content.html
+++ b/content.html
@@ -42,20 +42,13 @@
             <article class="item-container" id="about">
               <h2>O nas</h2>
               <p>
-                Nasza historia zaczęła się w sposób, który nazwałbym dziwnym.
-                W pewnym momencie zadzwonił Juro, że chciałby mnie z kimś poznać.
-                Byłem dość sceptycznie nastawiony, bo to jednak Juro, ale pomyślałem:
-                „Czemu by nie dać szansy i spróbować?” (Była to najlepsza decyzja, jaką podjąłem).
+                Tekst
               </p>
               <p>
-                Na początku było dość nieśmiało, ale z czasem zaczęliśmy nadawać na tej samej fali i
-                wymyślać swój slang (masło, margaryna itp.). Czasami były jakieś dołki, fochy,
-                ale i tak daliśmy radę. Chciałbym przeżyć z Tobą jeszcze wiele pięknych chwil i zawsze być przy Tobie.
+               Tekst
               </p>
               <p>
-                Prawie mijają już dwa lata i chciałbym Ci powiedzieć, że nadal bardzo Cię kocham
-                i nie wyobrażam sobie życia bez Ciebie. Jesteś moim światłem w ciemności,
-                moim wsparciem w trudnych chwilach i moim uśmiechem każdego dnia.
+             Tekst
               </p>
               <div class="icons-content">🌅🌅🌅🌅🌅🌅🌅🌅🌅</div>
             </article>
@@ -71,36 +64,7 @@
               
                 <h2>Opowieść</h2>
                 <p>
-                  Pewnego razu, w małym miasteczku, żył chłopak o imieniu Janek. Janek był zwykłym chłopakiem,
-                  który uwielbiał spędzać czas na świeżym powietrzu, wędrując po okolicznych lasach i łąkach.
-                  Pewnego dnia, podczas jednej z takich wędrówek, spotkał dziewczynę o imieniu Ania.
-                </p>
-                <p>
-                  Ania była piękną, uśmiechniętą dziewczyną, która również uwielbiała przyrodę. Od razu zauważyli,
-                  że mają wiele wspólnego. Zaczęli rozmawiać i spędzili razem cały dzień,
-                  odkrywając nowe ścieżki i ciesząc się swoim towarzystwem.
-                </p>
-                <p>
-                  Z czasem Janek i Ania zaczęli spotykać się coraz częściej. Każde spotkanie było dla nich wyjątkowe.
-                  Razem przeżywali wiele przygód, od wspólnych wycieczek rowerowych, przez pikniki nad jeziorem, aż po wieczorne spacery pod gwiazdami.
-                </p>
-                <p>
-                  Pewnego dnia, podczas jednej z takich wypraw, Janek postanowił wyznać Ani swoje uczucia. Zabrał ją na wzgórze,
-                  skąd rozciągał się piękny widok na całe miasteczko. Tam, pod rozgwieżdżonym niebem, powiedział jej, jak bardzo ją kocha.
-                </p>
-                <p>
-                  Ania była wzruszona i odpowiedziała, że również go kocha. Od tego dnia stali się nierozłączni.
-                  Razem planowali przyszłość, marzyli o wspólnym domu i rodzinie. Każdy dzień spędzony razem był dla nich najpiękniejszym dniem.
-                </p>
-                <p>
-                  Ich miłość rosła z każdym dniem. Wspólnie przeżywali radości i smutki,
-                  wspierali się nawzajem w trudnych chwilach i cieszyli się każdą chwilą spędzoną razem. Janek i Ania wiedzieli,
-                  że ich miłość jest wyjątkowa i że chcą spędzić razem resztę życia.
-                </p>
-                <p>
-                  I tak, po wielu latach, Janek i Ania wciąż byli razem, szczęśliwi i zakochani jak pierwszego dnia.
-                  Ich historia była dowodem na to, że prawdziwa miłość istnieje i że warto o nią walczyć. Razem tworzyli piękne wspomnienia,
-                  które na zawsze pozostaną w ich sercach.
+                Tu jakaś historyjka opowieść lub jakis tekst cokolwiek
                 </p>
             </article>
             <article class="item-2">
@@ -113,7 +77,7 @@
         </section>
         <section class="proposal">
           <article class="proposal-text">
-            <h2>Chcemy być tacy jak Ania i Janek?</h2>
+            <h2>Tekst</h2>
           </article>
         </section>
         <section class="cards" id="mosaic">
@@ -124,9 +88,9 @@
             />
             <aside class="mjs">
               <div>
-                <h3>Warszawa</h3>
+                <h3>sytuacja</h3>
                 <p>
-                  Pojechaliśmy po marcina na lotnisko i w Warszawie kupiłem spodnie na wesele twojej kuzynki,
+                  Opis sytuacji
                 </p>
               </div>
             </aside>
@@ -136,10 +100,12 @@
               src="./assets/img/mjs-img/ikea_uro.jpg"
               alt="Ikea"
             />
-            <aside class="mjs">
+             <aside class="mjs">
               <div>
-                <h3>Urodziny</h3>
-                <p>Spontaniczna Ikea w twoje urodziny.</p>
+                <h3>sytuacja</h3>
+                <p>
+                  Opis sytuacji
+                </p>
               </div>
             </aside>
           </div>
