--- a/content.html
+++ b/content.html
@@ -54,8 +54,8 @@
             </article>
             <article class="item">
               <img
-                src="./assets/img/bieszczady_buzi (2).jpeg"
-                alt="Całus w Bieszczadach"
+                src="./assets/img/jajko.jpg"
+                alt="Ca w Bieszczadach"
               />
             </article>
           </section>
